[package]
name = "tpass"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "tpass.exe"
FileDescription = "A simple password generator with a system tray icon"

[dependencies]
clipboard = "0.5.0"
image = "0.25.5"
rand = "0.8.5"
tao = "0.31.1"
tray-icon = { path="crates/tray-icon" }
winreg = "0.55.0"

[build-dependencies]
winapi = { version = "0.3.9", features = ["winnt"] }
winres = "0.1.12"
